spacing between title and subtitle in fixed grid

--- a/plugins/cr-wpbakery-extend/assets/sass/modules/_fixed-width-grid.scss
+++ b/plugins/cr-wpbakery-extend/assets/sass/modules/_fixed-width-grid.scss
@@ -52,7 +52,7 @@
             z-index: 1;
         }
         &:hover &-image{
-            transform: scale(1.7);
+            transform: scale(1.3);
         }
         &-text {
             position: absolute;
@@ -116,7 +116,7 @@
             font-size: 2rem;
             font-weight: 400;
             line-height: 1.4em;
-            margin: 0 0 1.8rem;
+            margin: 0 0 1rem;
             transition: all .5s;
         }
         &:hover &-title {
